--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <section id="one">
         <header class="major">
           <h2>
-            I create and build engaging digital experiences through interactive
-            and clean design
+            I’m a full stack developer with experience in TypeScript, Next.js
+            and AWS
           </h2>
         </header>
         <p></p>
@@ -116,13 +116,12 @@
       <section id="three">
         <h2>Get In Touch</h2>
         <p>
-          Accumsan pellentesque commodo blandit enim arcu non at amet id arcu
-          magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem
-          vulputate lorem neque lorem ipsum dolor.
+          Have any questions, comments or concerns? Reach out to me to discuss
+          how we can work together!
         </p>
         <div class="row">
           <div class="col-8 col-12-small">
-            <form method="post" action="#">
+            <form method="post" action="sendEmail.php">
               <div class="row gtr-uniform gtr-50">
                 <div class="col-6 col-12-xsmall">
                   <input type="text" name="name" id="name" placeholder="Name" />
@@ -155,21 +154,21 @@
                 <h3 class="icon solid fa-home">
                   <span class="label">Address</span>
                 </h3>
-                1234 Somewhere Rd.<br />
-                Nashville, TN 00000<br />
-                United States
+                Akashi<br />
+                Hyogo<br />
+                Japan
               </li>
-              <li>
+              <!-- <li>
                 <h3 class="icon solid fa-mobile-alt">
                   <span class="label">Phone</span>
                 </h3>
                 000-000-0000
-              </li>
+              </li> -->
               <li>
                 <h3 class="icon solid fa-envelope">
                   <span class="label">Email</span>
                 </h3>
-                <a href="#">hello@untitled.tld</a>
+                <a href="#">contact@sylviomafort.dev</a>
               </li>
             </ul>
           </div>
@@ -499,30 +498,36 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <div class="inner">
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands fa-twitter"
+            <a
+              href="https://twitter.com/Sylfort1"
+              class="icon brands fa-twitter"
               ><span class="label">Twitter</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-github"
+            <a href="https://github.com/sylfort" class="icon brands fa-github"
               ><span class="label">Github</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-dribbble"
-              ><span class="label">Dribbble</span></a
+            <a
+              href="https://www.linkedin.com/in/sylvio-mafort/"
+              class="icon brands fa-linkedin"
+              ><span class="label">Linkedin</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon solid fa-envelope"
+            <a
+              href="mailto:contact@sylviomafort.dev"
+              class="icon solid fa-envelope"
               ><span class="label">Email</span></a
             >
           </li>
         </ul>
-        <ul class="copyright">
+        <!-- <ul class="copyright">
           <li>&copy; Untitled</li>
           <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul>
+        </ul> -->
       </div>
     </footer>
 
