edited email form2

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="row">
           <div class="col-8 col-12-small">
             <form
-              action="https://formsubmit.co/contact@sylviomafort.dev"
+              action="https://formsubmit.co/sylarfort@gmail.com"
               method="POST"
             >
               <input
