--- a/index.html
+++ b/index.html
@@ -163,12 +163,14 @@
                   ></textarea>
                 </div>
               </div>
+              <ul class="actions">
+                <li>
+                  <button type="submit" value="Send Message">
+                    Send Message
+                  </button>
+                </li>
+              </ul>
             </form>
-            <ul class="actions">
-              <li>
-                <button type="submit" value="Send Message">Send Message</button>
-              </li>
-            </ul>
           </div>
           <div class="col-4 col-12-small">
             <ul class="labeled-icons">
