--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <!-- Nav -->
     <nav id="nav">
       <ul class="container">
-        <li><a href="#top">Top</a></li>
-        <li><a class="work" href="#work">Work</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#top">Home</a></li>
+        <li><a class="about" href="#about">About me</a></li>
+        <li><a class="work" href="#work">Projects</a></li>
         <li><a class="contact" href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -54,10 +54,63 @@
         <ul class="actions">
           <li>
             <a href="#work" class="button btn-primary scroll-me work"
-              >Learn about what I do</a
+              >Check out my recent projects</a
             >
           </li>
         </ul>
+        <ul class="actions">
+          <li>
+            <a href="#contact" class="button btn-primary scroll-me contact"
+              >Contact me</a
+            >
+          </li>
+        </ul>
+      </section>
+
+      <!-- Four -->
+      <section id="about">
+        <h2>About me</h2>
+
+        <h4>Text</h4>
+        <p>
+          This is <b>bold</b> and this is <strong>strong</strong>. This is
+          <i>italic</i> and this is <em>emphasized</em>. This is
+          <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+          This is <u>underlined</u> and this is code:
+          <code>for (;;) { ... }</code>. Finally,
+          <a href="#">this is a link</a>.
+        </p>
+        <hr />
+        <header>
+          <h4>Heading with a Subtitle</h4>
+          <p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+        </header>
+        <p>
+          Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio
+          porttitor sem non mi integer non faucibus ornare mi ut ante amet
+          placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
+          varius montes viverra nibh in adipiscing blandit tempus accumsan.
+        </p>
+        <header>
+          <h5>Heading with a Subtitle</h5>
+          <p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+        </header>
+        <p>
+          Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio
+          porttitor sem non mi integer non faucibus ornare mi ut ante amet
+          placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
+          varius montes viverra nibh in adipiscing blandit tempus accumsan.
+        </p>
+        <hr />
+        <h5>Blockquote</h5>
+        <blockquote>
+          Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis
+          sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus
+          vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing
+          accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem
+          ipsum dolor sit amet nullam adipiscing eu felis.
+        </blockquote>
+        <h5>Preformatted</h5>
       </section>
 
       <!-- Two -->
@@ -196,6 +249,11 @@
               </li>
             </ul>
           </div>
+
+          <ul class="icons copy copyright">
+            <li>&copy; 2024 Sylvio Mafort</li>
+            <li>Design: HTML5 UP</li>
+          </ul>
         </div>
       </section>
 
@@ -517,6 +575,19 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 				--></div>
 
+    <!-- Six -->
+    <!-- <section id="five">
+      <h2>Elements</h2>
+
+      <h4>Text</h4>
+
+      <hr />
+      <div class="copyright">
+        <p>&copy; 2024 Sylvio Mafort</p>
+        <p>Design: HTML5 UP</p>
+      </div>
+    </section> -->
+
     <!-- Footer -->
     <footer id="footer">
       <div class="inner">
@@ -548,10 +619,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
             >
           </li>
         </ul>
-        <!-- <ul class="copyright">
-          <li>&copy; Untitled</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-        </ul> -->
       </div>
     </footer>
 
