--- a/index.html
+++ b/index.html
@@ -50,38 +50,42 @@
             and AWS
           </h2>
         </header>
-        <p></p>
-        <ul class="actions">
-          <li>
-            <a href="#work" class="button btn-primary scroll-me work"
-              >Check out my recent projects</a
-            >
-          </li>
-        </ul>
-        <ul class="actions">
-          <li>
-            <a href="#contact" class="button btn-primary scroll-me contact"
-              >Contact me</a
-            >
-          </li>
-        </ul>
+
+		<div class="row aln-center">
+			<ul class="actions">
+				<li>
+				<a id="btn-main-color" href="#work" class="button scroll-me work"
+					>Check out my recent projects</a
+				>
+				</li>
+			</ul>
+			<ul class="actions">
+				<li>
+				<a id="btn-main-color" href="#contact" class="button scroll-me contact m-left"
+					>Contact me</a
+				>
+				</li>
+			</ul>
+		</div>
       </section>
 
       <!-- Four -->
       <section id="about">
         <h2>About me</h2>
 
-        <h4>Text</h4>
-        <p>
-          This is <b>bold</b> and this is <strong>strong</strong>. This is
-          <i>italic</i> and this is <em>emphasized</em>. This is
-          <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-          This is <u>underlined</u> and this is code:
-          <code>for (;;) { ... }</code>. Finally,
-          <a href="#">this is a link</a>.
-        </p>
-        <hr />
-        <header>
+        <div class="about-p">
+			<p>Web Developer with a background in economics and education, I have been working in Japan for 4+ years.</p>
+			<p>I have experience with multiple technology stacks including React.js, Node.js, and Typescript. I drive digital transformation as evidenced by:</p>
+			
+			<p>✅Full stack development of Coffee Chats Now!, a web application that makes global developer networking interactions seamless.</p>
+			<p>✅Open source contributions to Together, improving Discord event integrations for a community of 40,000+ people.</p>
+			<p>✅Architecting AWS-powered deployments using Linux, Docker, and GitHub Actions, resulting in 99.9% uptime.</p>
+			
+			<p>I'm excited to explore challenges in fast-paced environments, leveraging my trilingual communication skills and adaptability from living in multiple countries.</p>
+        
+		</div>	
+        <!-- <hr /> -->
+        <!-- <header>
           <h4>Heading with a Subtitle</h4>
           <p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
         </header>
@@ -110,13 +114,13 @@
           accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem
           ipsum dolor sit amet nullam adipiscing eu felis.
         </blockquote>
-        <h5>Preformatted</h5>
+        <h5>Preformatted</h5> -->
       </section>
 
       <!-- Two -->
       <section id="two">
         <h2>Recent Work</h2>
-        <div class="row">
+        <div class="col-4">
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/01.jpg" class="image fit thumb"
               ><img src="images/thumbs/01.jpg" alt=""
@@ -138,7 +142,7 @@
             <h3>Tortor metus commodo</h3>
             <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
           </article>
-          <article class="col-6 col-12-xsmall work-item">
+          <!-- <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/04.jpg" class="image fit thumb"
               ><img src="images/thumbs/04.jpg" alt=""
             /></a>
@@ -162,7 +166,7 @@
         </div>
         <ul class="actions">
           <li><a href="#" class="button">Full Portfolio</a></li>
-        </ul>
+        </ul> -->
       </section>
 
       <!-- Three -->
