fix buttons centering

--- a/index.html
+++ b/index.html
@@ -44,14 +44,21 @@
     <div id="main">
       <!-- One -->
       <section id="one">
-        <header class="major">
-          <h2>
-            I’m a full stack developer with experience in TypeScript, Next.js
-            and AWS
+		<div class="row aln-center">
+        <header id="full" class="major row aln-center">
+			
+          <h2 id="main-h2">
+            I’m a full stack dev 
           </h2>
+		  <h2 id="main-h2">
+            using Next.js,  
+          </h2>
+		  <h2 id="main-h2">
+            TypeScript and AWS 
+          </h2>			
         </header>
 
-		<div class="row aln-center">
+		<div class="row aln-center good">
 			<ul class="actions">
 				<li>
 				<a id="btn-main-color" href="#work" class="button scroll-me work"
@@ -66,6 +73,7 @@
 				>
 				</li>
 			</ul>
+		</div>
 		</div>
       </section>
 
