--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
         <header id="full" class="major row aln-center">
 			
           <h2 id="main-h2">
-            I’m a full stack dev 
+            I’m a full stack Dev 
           </h2>
 		  <h2 id="main-h2">
-            using Next.js,  
+            focused on Next.js,  
           </h2>
 		  <h2 id="main-h2">
             TypeScript and AWS 
           </h2>			
         </header>
 
-		<div class="row aln-center good">
+		<div class="row aln-center actions-container">
 			<ul class="actions">
 				<li>
 				<a id="btn-main-color" href="#work" class="button scroll-me work"
@@ -95,8 +95,8 @@
       </section>
 
       <!-- Two -->
-      <section id="two">
-        <h2>Recent Work</h2>
+      <section id="work">
+			<h2>Recent Work</h2>
         <div class="col-4">
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/01.jpg" class="image fit thumb"
