adding work info

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h3>Runeterra Marketplace</h3>
 			<a href="https://sylfort.github.io/marketplace">Live Website</a>
 			<a href="https://github.com/sylfort/marketplace">Github</a>
-            <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+            <p>Marketplace built in Vue.js</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/02.jpg" class="image fit thumb"
