--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             <h3>Runeterra Marketplace</h3>
 			<a href="https://sylfort.github.io/marketplace">Live Website</a>
 			<a href="https://github.com/sylfort/marketplace">Github</a>
-            <p>Marketplace built in Vue.js</p>
+            <p>Marketplace for Legends of Runeterra built in Vanilla JavaScript and Bootstrap CSS</p>
           </article>
-          <article class="col-6 col-12-xsmall work-item">
+          <!-- <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/02.jpg" class="image fit thumb"
               ><img src="images/thumbs/02.jpg" alt=""
             /></a>
@@ -120,7 +120,7 @@
             /></a>
             <h3>Tortor metus commodo</h3>
             <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-          </article>
+          </article> -->
           <!-- <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/04.jpg" class="image fit thumb"
               ><img src="images/thumbs/04.jpg" alt=""
