updated runeterra image

--- a/index.html
+++ b/index.html
@@ -99,13 +99,16 @@
 			<h2>Recent Work</h2>
         <div class="col-4">
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/fulls/01.jpg" class="image fit thumb"
-              ><img src="images/thumbs/01.jpg" alt=""
+            <a href="images/runeterra_screenshot.jpg" class="image fit thumb"
+              ><img src="images/runeterra_screenshot.jpg" alt=""
             /></a>
             <h3>Runeterra Marketplace</h3>
 			<a href="https://sylfort.github.io/marketplace">Live Website</a>
 			<a href="https://github.com/sylfort/marketplace">Github</a>
-            <p>Marketplace for Legends of Runeterra built in Vanilla JavaScript and Bootstrap CSS</p>
+			<div class="about-p">
+			<p>Marketplace for Legends of Runeterra built in Vanilla JavaScript and Bootstrap CSS</p>
+			</div>
+            
           </article>
           <!-- <article class="col-6 col-12-xsmall work-item">
             <a href="images/fulls/02.jpg" class="image fit thumb"
