--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <header id="full" class="major row aln-center">
 			
           <h2 id="main-h2">
-            I’m a full stack Dev 
+            I’m a Full-Stack Dev 
           </h2>
 		  <h2 id="main-h2">
             focused on Next.js,  
@@ -61,14 +61,14 @@
 		<div class="row aln-center actions-container">
 			<ul class="actions">
 				<li>
-				<a id="btn-main-color" href="#work" class="button scroll-me work"
+				<a id="rounded" href="#work" class="button scroll-me work"
 					>Check out my recent projects</a
 				>
 				</li>
 			</ul>
 			<ul class="actions">
 				<li>
-				<a id="btn-main-color" href="#contact" class="button scroll-me contact m-left"
+				<a id="rounded" href="#contact" class="button scroll-me contact m-left"
 					>Contact me</a
 				>
 				</li>
@@ -83,13 +83,17 @@
 
         <div class="about-p">
 			<p>Web Developer with a background in economics and education, I have been working in Japan for 4+ years.</p>
-			<p>I have experience with multiple technology stacks including React.js, Node.js, and Typescript. I drive digital transformation as evidenced by:</p>
+			<p>I have experience with multiple technology stacks including <b>React.js, Node.js, and Typescript.</b> I drive digital transformation as evidenced by:</p>
 			
-			<p>✅Full stack development of Coffee Chats Now!, a web application that makes global developer networking interactions seamless.</p>
-			<p>✅Open source contributions to Together, improving Discord event integrations for a community of 40,000+ people.</p>
-			<p>✅Architecting AWS-powered deployments using Linux, Docker, and GitHub Actions, resulting in 99.9% uptime.</p>
+			<p>✅ Full stack development of Coffee Chats Now!, a web application that makes global developer networking interactions seamless.</p>
+			<p>✅ Open source contributions to Together, improving Discord event integrations for a community of 40,000+ people.</p>
+			<p>✅ Architecting AWS-powered deployments using Linux, Docker, and GitHub Actions, resulting in 99.9% uptime.</p>
 			
-			<p>I'm excited to explore challenges in fast-paced environments, leveraging my trilingual communication skills and adaptability from living in multiple countries.</p>
+			<p>I'm excited to explore challenges in fast-paced environments, leveraging my trilingual
+				<img src="images/brazil_flag.png" alt="Brazil Flag" class="flag-icon">
+				<img src="images/usa_flag.png" alt="USA Flag" class="flag-icon">
+				<img src="images/japan_flag.png" alt="Japan Flag" class="flag-icon">
+				communication skills and adaptability from living in multiple countries.</p>
         
 		</div>	
       </section>
@@ -99,12 +103,15 @@
 			<h2>Recent Work</h2>
         <div class="col-4">
           <article class="col-6 col-12-xsmall work-item">
+			<h2 id="project-title">Runeterra Marketplace</h2>
             <a href="images/runeterra_screenshot.jpg" class="image fit thumb"
               ><img src="images/runeterra_screenshot.jpg" alt=""
             /></a>
             <h3>Runeterra Marketplace</h3>
-			<a href="https://sylfort.github.io/marketplace">Live Website</a>
-			<a href="https://github.com/sylfort/marketplace">Github</a>
+			<div class="row aln-center actions-container">
+				<a id="rounded" class="button" href="https://sylfort.github.io/marketplace">Live Website</a>
+				<a id="rounded" class="button" href="https://github.com/sylfort/marketplace">Github</a>
+			</div>
 			<div class="about-p">
 			<p>Marketplace for Legends of Runeterra built in Vanilla JavaScript and Bootstrap CSS</p>
 			</div>
