fixed mobile view

--- a/index.html
+++ b/index.html
@@ -259,26 +259,33 @@
             <a
               href="https://twitter.com/Sylfort1"
               class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
+              ><span class="label">Twitter</span>
+              <div class="small-font">Twitter</div>
+              </a
+            >     
           </li>
           <li>
             <a href="https://github.com/sylfort" class="icon brands fa-github"
-              ><span class="label">Github</span></a
+              ><span class="label">Github</span>
+              <div class="small-font">Github</div>
+              </a
             >
           </li>
           <li>
             <a
               href="https://www.linkedin.com/in/sylvio-mafort/"
               class="icon brands fa-linkedin"
-              ><span class="label">Linkedin</span></a
+              ><span class="label">Linkedin</span>
+              <div class="small-font">Linkedin</div>
+              </a
             >
           </li>
           <li>
             <a
               href="mailto:contact@sylviomafort.dev"
               class="icon solid fa-envelope"
-              ><span class="label">Email</span></a
+              ><span class="label">Email</span>
+              <div class="small-font">Email</div></a
             >
           </li>
         </ul>
