fixed buttons margin

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="main">
       <!-- One -->
       <section id="one">
-		<div class="row aln-center">
+		<div class="row aln-center aln-center-flex">
         <header id="full" class="major row aln-center">
 			
           <h2 id="main-h2">
@@ -61,14 +61,14 @@
 		<div class="row aln-center actions-container">
 			<ul class="actions">
 				<li>
-				<a id="rounded" href="#work" class="button scroll-me work"
+				<a id="margin-first-buttons" href="#work" class="margin-first-buttons button scroll-me work"
 					>Check out my recent projects</a
 				>
 				</li>
 			</ul>
 			<ul class="actions">
 				<li>
-				<a id="rounded" href="#contact" class="button scroll-me contact m-left"
+				<a id="margin-first-buttons" href="#contact" class="button scroll-me contact m-left"
 					>Contact me</a
 				>
 				</li>
