Coffee chats now added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <header id="full" class="major row aln-center">
 			
           <h2 id="main-h2">
-            I’m a Full-Stack Dev 
+            I'm a Full-Stack Dev 
           </h2>
 		  <h2 id="main-h2">
             focused on Next.js,  
@@ -101,9 +101,11 @@
       <!-- Two -->
       <section id="work">
 			<h2>Recent Work</h2>
+
+            <!-- Runeterra -->
         <div class="col-4">
           <article class="col-6 col-12-xsmall work-item">
-			<h2 id="project-title">Runeterra Marketplace</h2>
+		      	<h2 id="project-title">Runeterra Marketplace</h2>
             <a href="images/runeterra_screenshot.jpg" class="image fit thumb"
               ><img src="images/runeterra_screenshot.jpg" alt=""
             /></a>
@@ -115,6 +117,23 @@
 			<div class="about-p">
 			<p>Marketplace for Legends of Runeterra built in Vanilla JavaScript and Bootstrap CSS</p>
 			</div>
+
+      <!-- CoffeeChatsNow -->
+
+      <div class="col-4">
+        <article class="col-6 col-12-xsmall work-item">
+          <h2 id="project-title">Coffee Chats NOW!</h2>
+          <a href="images/coffeechatsnow_screenshot.jpg" class="image fit thumb"
+            ><img src="images/coffeechatsnow_screenshot.jpg" alt=""
+          /></a>
+          <h3>Coffee Chats NOW!</h3>
+    <div class="row aln-center actions-container">
+      <a id="rounded" class="button" href="https://sylfort.github.io/100hours-bub">Live Website</a>
+      <a id="rounded" class="button" href="https://github.com/sylfort/100hours-bub">Github</a>
+    </div>
+    <div class="about-p">
+    <p>Coffee chat event scheduler app, integrating a React frontend with an Express backend.</p>
+    </div>
             
           </article>
           <!-- <article class="col-6 col-12-xsmall work-item">
