fixed modal css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/modal.css">
+    <link rel="stylesheet" href="assets/css/carousel.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
@@ -186,7 +187,7 @@
         <li>OpenAI API for Japanese translations</li>
         <li>Vercel for deployment and hosting</li>
       </ul>
-      <p>This project demonstrates my ability to work with modern full-stack technologies, integrate AI services, and deploy scalable applications on cloud platforms.</p>
+      <!-- <p>This project demonstrates my ability to work with modern full-stack technologies, integrate AI services, and deploy scalable applications on cloud platforms.</p> -->
     </div>
   </div>
 </div>
@@ -213,6 +214,30 @@
     </div>
 
   </article>
+</div>
+
+<!-- Runeterra Marketplace Modal -->
+<div id="runeterraModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <div class="about-p">
+      <h2>Runeterra Marketplace</h2>
+      <p>A marketplace application for Legends of Runeterra, built using vanilla JavaScript and Bootstrap CSS. This project showcases the ability to create interactive web applications using fundamental web technologies.</p>
+      <h4>Key Features:</h4>
+      <ul>
+        <li>Browse and search Legends of Runeterra items</li>
+        <li>Responsive design for various screen sizes</li>
+        <li>Interactive UI elements for an engaging user experience</li>
+      </ul>
+      <h4>Technologies Used:</h4>
+      <ul>
+        <li>HTML5 for structuring the web content</li>
+        <li>Vanilla JavaScript for dynamic functionality</li>
+        <li>Bootstrap CSS for responsive and attractive styling</li>
+      </ul>
+      <!-- <p>This project demonstrates proficiency in core web development technologies and the ability to create functional, user-friendly web applications without relying on complex frameworks.</p> -->
+    </div>
+  </div>
 </div>
 
 <!-- Coffee Chats Now -->
@@ -243,30 +268,6 @@
   </article>
 </div>
 
-<!-- Runeterra Marketplace Modal -->
-<div id="runeterraModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <div class="about-p">
-      <h2>Runeterra Marketplace</h2>
-      <p>A marketplace application for Legends of Runeterra, built using vanilla JavaScript and Bootstrap CSS. This project showcases the ability to create interactive web applications using fundamental web technologies.</p>
-      <h4>Key Features:</h4>
-      <ul>
-        <li>Browse and search Legends of Runeterra items</li>
-        <li>Responsive design for various screen sizes</li>
-        <li>Interactive UI elements for an engaging user experience</li>
-      </ul>
-      <h4>Technologies Used:</h4>
-      <ul>
-        <li>HTML5 for structuring the web content</li>
-        <li>Vanilla JavaScript for dynamic functionality</li>
-        <li>Bootstrap CSS for responsive and attractive styling</li>
-      </ul>
-      <p>This project demonstrates proficiency in core web development technologies and the ability to create functional, user-friendly web applications without relying on complex frameworks.</p>
-    </div>
-  </div>
-</div>
-
 <!-- Coffee Chats Now Modal -->
 <div id="coffeeChatsModal" class="modal">
   <div class="modal-content">
@@ -289,10 +290,43 @@
         <li>Node.js and Express for a robust backend</li>
         <li>MongoDB with Mongoose for flexible data storage and management</li>
       </ul>
-      <p>This project showcases full-stack development skills, the ability to work with modern JavaScript frameworks and libraries, and experience in creating applications that solve real-world problems.</p>
+      <!-- <p>This project showcases full-stack development skills, the ability to work with modern JavaScript frameworks and libraries, and experience in creating applications that solve real-world problems.</p> -->
     </div>
   </div>
 </div>
+
+<!-- Menternshift -->
+<section id="seven">
+<h2>OSS Group Project</h2>
+<div class="col-4">
+  <article class="col-6 col-12-xsmall work-item">
+    <h2 id="project-title">Menternshift</h2>
+    <div class="carousel-container">
+      <div class="carousel">
+        <img src="images/menternshift.jpg" alt="Menternshift Screenshot 1" />
+        <img src="images/menternshift_3.jpg" alt="Menternshift Screenshot 2" />
+      </div>
+      <button class="carousel-button prev">&lt;</button>
+      <button class="carousel-button next">&gt;</button>
+    </div>
+    <h3>Menternshift</h3>
+    <div class="row aln-center actions-container">
+      <a id="rounded" class="modern-button" href="https://github.com/ayau8/menternshift-backend">Github Backend</a>
+      <a id="rounded" class="modern-button" href="https://github.com/DaveBFlanikJr/menternshift-frontend">Github Frontend</a>
+    </div>
+    <!-- <div class="technologies-container">
+      <h4 class="technologies-heading">Technologies used:</h4>
+      <div class="technologies">
+        <button class="tech-button" disabled>React</button>
+        <button class="tech-button" disabled>Node.js</button>
+        <button class="tech-button" disabled>Express</button>
+        <button class="tech-button" disabled>MongoDB</button>
+        <button class="tech-button" disabled>Tailwind CSS</button>
+      </div>
+    </div> -->
+  </article>
+</div>
+</section>
 
             <!-- Runeterra
         <div class="col-4">
@@ -511,5 +545,6 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/modal.js"></script>
+    <script src="assets/js/carousel.js"></script>
   </body>
 </html>
