--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <body class="is-preload">
     <!-- Nav -->
     <nav id="nav">
-      <ul class="container">
+      <ul class="container2">
         <li><a href="#top">Home</a></li>
         <li><a class="about" href="#about">About me</a></li>
         <li><a class="work" href="#work">Projects</a></li>
-        <li><a class="contact" href="#contact">Contact</a></li>
+        <li><a class="contact2" href="#contact">Contact</a></li>
       </ul>
     </nav>
 
@@ -50,32 +50,24 @@
         <header id="full" class="major row aln-center">
 			
           <h2 id="main-h2">
-            I'm a Full-Stack Dev 
-          </h2>
-		  <h2 id="main-h2">
-            focused on Next.js,  
-          </h2>
-		  <h2 id="main-h2">
-            TypeScript and AWS 
-          </h2>			
+            I'm a Full-Stack Web Dev 
+          </h2>		
         </header>
+        <ul class="actions">
+          <li>
+          <a id="margin-first-buttons" href="#work" class="margin-first-buttons button scroll-me work"
+            >Check out my recent projects</a
+          >
+          </li>
+          <li>
+            <a id="margin-first-buttons" href="#contact" class="button scroll-me contact m-left"
+              >Contact me</a
+            >
+            </li>
+        </ul>
 
-		<div class="row aln-center actions-container">
-			<ul class="actions">
-				<li>
-				<a id="margin-first-buttons" href="#work" class="margin-first-buttons button scroll-me work"
-					>Check out my recent projects</a
-				>
-				</li>
-			</ul>
-			<ul class="actions">
-				<li>
-				<a id="margin-first-buttons" href="#contact" class="button scroll-me contact m-left"
-					>Contact me</a
-				>
-				</li>
-			</ul>
-		</div>
+		<!-- <div class="row aln-center actions-container">
+		</div> -->
 		</div>
       </section>
 
